--- a/service/package.json
+++ b/service/package.json
@@ -28,7 +28,8 @@
     "eslint-plugin-sonarjs": "^0.5.0",
     "eslint-plugin-standard": "^4.0.1",
     "ioredis": "^4.16.0",
-    "koa": "^2.11.0"
+    "koa": "^2.11.0",
+    "koa-router": "^8.0.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
